
  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Bump KDE build dependencies to 4:4.5.
  * Update installed files.
  * Bump to Standards-Version 3.9.1:
    - kde-config-cron breaks kcron (<< 4:4.4) rather than conflicts.

  [ Modestas Vainius ]
  * Drop 04_system_config_printer_kde_pyqt4.7_issues.diff patch, it was
    backported from upstream.

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sat, 11 Sep 2010 20:07:52 +0000

kdeadmin (4:4.4.5-4) unstable; urgency=low

  [ Modestas Vainius ]
  * Properly load cupshelpers module (i.e. fix
    01_system_config_printer_kde_cupsutils.diff patch). (Closes: #597071)
  * Backport a bunch of PyQt 4.7 compatibility fixes from upstream VCS
    (patch 04_system_config_printer_kde_pyqt4.7_issues.diff).
  * Do not enormously enlarge the window when Printer Options dialog is opened
    (patch 05_system_config_printer_kde_scroll_printer_options.diff).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 17 Sep 2010 02:00:46 +0300

kdeadmin (4:4.4.5-3) unstable; urgency=low

  [ Modestas Vainius ]
  * Properly merge all changes from 4.4.5-1.1 NMU. (Closes: #592900)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 13 Sep 2010 20:13:56 +0300

kdeadmin (4:4.4.5-2) unstable; urgency=low

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.
  * Modify changelog to reflect the actual history.

  [ Sune Vuorela ]
  * Merge in Guido's NMU
  * Fix the code regarding a message box in system-config-printer-kde 
    (Closes: 593403)

 -- Sune Vuorela <sune@debian.org>  Mon, 30 Aug 2010 02:08:09 +0200

kdeadmin (4:4.4.5-1.1) experimental; urgency=low

  * Non-maintainer upload.
  * Use python-cupshelpers instead of python-cupsutils (Closes: #592900)

 -- Guido Günther <agx@sigxcpu.org>  Sun, 15 Aug 2010 20:21:53 +0200

kdeadmin (4:4.4.5-1) unstable; urgency=low

  * New upstream release.

  [ Pino Toscano ]
  * Remove all the leftovers of kpackage.
