@@ -11,6 +11,8 @@ kdeadmin (4:4.5.1-0r1) UNRELEASED; urgency=low
   [ Modestas Vainius ]
   * Drop 04_system_config_printer_kde_pyqt4.7_issues.diff patch, it was
     backported from upstream.
+  * Adapt 05_system_config_printer_kde_scroll_printer_options.diff to upstream
+    changes.
 
  -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sat, 11 Sep 2010 20:07:52 +0000
 
